--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,11 @@
-<div class="content" role="main">
-  <span>{{ title }} app is running!</span>
-</div>
-
 <div>
   <!-- Off-canvas menu for mobile, show/hide based on off-canvas menu state. -->
-  <div class="fixed inset-0 flex z-40 md:hidden" role="dialog" aria-modal="true">
+  <div *ngIf="!isShown" class="fixed inset-0 flex z-40 md:hidden" role="dialog" aria-modal="true">
 
     <div class="fixed inset-0 bg-gray-600 bg-opacity-75" aria-hidden="true"></div>
     <div class="relative flex-1 flex flex-col max-w-xs w-full bg-indigo-700">
       <div class="absolute top-0 right-0 -mr-12 pt-2">
-        <button type="button" class="ml-1 flex items-center justify-center h-10 w-10 rounded-full focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white">
+        <button (click)="toggleShow()" type="button" class="ml-1 flex items-center justify-center h-10 w-10 rounded-full focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white">
           <span class="sr-only">Close sidebar</span>
           <!-- Heroicon name: outline/x -->
           <svg class="h-6 w-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -18,27 +14,25 @@
         </button>
       </div>
 
-      <div class="flex-1 h-0 pt-5 pb-4 overflow-y-auto">
-        <div class="flex-shrink-0 flex p-4">
-          <a href="#" class="flex-shrink-0 group block">
-            <div class="pl-4 mb-10">
-              <img class="inline-block h-48 w-48 rounded-md" src="https://media-exp1.licdn.com/dms/image/C4E03AQHXXrHbSZnCQw/profile-displayphoto-shrink_800_800/0/1606066680212?e=1647475200&v=beta&t=SlZwID8_8VINVSQZ04tPiWdZsJq6_dPtkgkiCcbHayc" alt="">
+      <div class="flex-shrink-0 flex border-t border-indigo-800 p-4">
+        <a href="#" class="flex-shrink-0 w-full group block">
+          <div class="flex items-center">
+            <div>
+              <img class="inline-block h-16 w-16 rounded-md" src="https://media-exp1.licdn.com/dms/image/C4E03AQHXXrHbSZnCQw/profile-displayphoto-shrink_800_800/0/1606066680212?e=1647475200&v=beta&t=SlZwID8_8VINVSQZ04tPiWdZsJq6_dPtkgkiCcbHayc" alt="">
             </div>
-            <div class="flex items-center">
-              <div class="ml-3">
-                <p class="text-2xl font-bold text-white">
-                  ЮРИЙ ФЕДОРОВ
-                </p>
-                <p class="text-base font-medium text-indigo-200 group-hover:text-white">
-                  Frontend-разработчик
-                </p>
-              </div>
+            <div class="ml-3">
+              <p class="text-base font-medium text-white">
+                Юрий Федоров
+              </p>
+              <p class="text-xs font-medium text-indigo-200 group-hover:text-white">
+                Frontend-разработчик
+              </p>
             </div>
-          </a>
-        </div>
-        <div class="mt-5 px-8 space-y-1 text-white">
-          SIDEBAR-MOB
-        </div>
+          </div>
+        </a>
+      </div>
+      <div class="mt-5 px-4 space-y-1 text-white">
+        SIDEBAR-MOB
       </div>
 
     </div>
@@ -76,9 +70,10 @@
       </div>
     </div>
   </div>
+
   <div class="md:pl-96 flex flex-col flex-1">
     <div class="sticky top-0 z-10 md:hidden pl-1 pt-1 sm:pl-3 sm:pt-3 bg-gray-100">
-      <button type="button" class="-ml-0.5 -mt-0.5 h-12 w-12 inline-flex items-center justify-center rounded-md text-gray-500 hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+      <button (click)="toggleShow()" type="button" class="-ml-0.5 -mt-0.5 h-12 w-12 inline-flex items-center justify-center rounded-md text-gray-500 hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
         <span class="sr-only">Open sidebar</span>
         <!-- Heroicon name: outline/menu -->
         <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -94,7 +89,11 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
           <!-- Replace with your content -->
           <div class="py-4">
-            <div class="border-4 border-dashed border-gray-200 rounded-lg h-96"></div>
+            <div class="border-4 border-dashed border-gray-200 rounded-lg h-96">
+              <div class="content" role="main">
+                <span>{{ title }} app is running!</span>
+              </div>
+            </div>
           </div>
           <!-- /End replace -->
         </div>
