edit User title

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,13 +18,16 @@
         <a href="#" class="flex-shrink-0 w-full group block">
           <div class="flex items-center">
             <div>
-              <img class="inline-block h-16 w-16 rounded-md" src="https://media-exp1.licdn.com/dms/image/C4E03AQHXXrHbSZnCQw/profile-displayphoto-shrink_800_800/0/1606066680212?e=1647475200&v=beta&t=SlZwID8_8VINVSQZ04tPiWdZsJq6_dPtkgkiCcbHayc" alt="">
+              <img
+                class="inline-block h-20 w-20 rounded-md"
+                src="https://media-exp1.licdn.com/dms/image/C4E03AQHXXrHbSZnCQw/profile-displayphoto-shrink_800_800/0/1606066680212?e=1647475200&v=beta&t=SlZwID8_8VINVSQZ04tPiWdZsJq6_dPtkgkiCcbHayc"
+                alt="">
             </div>
             <div class="ml-3">
-              <p class="text-base font-medium text-white">
+              <p class="text-2xl font-medium text-white">
                 Юрий Федоров
               </p>
-              <p class="text-xs font-medium text-indigo-200 group-hover:text-white">
+              <p class="text-base font-medium text-indigo-200 group-hover:text-white">
                 Frontend-разработчик
               </p>
             </div>
@@ -91,7 +94,7 @@
           <div class="py-4">
             <div class="border-4 border-dashed border-gray-200 rounded-lg h-96">
               <div class="content" role="main">
-                <span>{{ title }} app is running!</span>
+                <span>{{ title }}</span>
               </div>
             </div>
           </div>
