--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -84,18 +84,22 @@
         </svg>
       </button>
     </div>
-    <main class="flex-1">
+    <main class="content flex-1" role="main">
       <div class="py-6">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
-          <h1 class="text-2xl font-semibold text-gray-900">CONTENT</h1>
+          <h1 class="text-2xl font-semibold text-gray-900">{{ title }}</h1>
+        </div>
+        <div class="relative mt-8">
+          <div class="absolute inset-0 flex items-center" aria-hidden="true">
+            <div class="w-full border-t border-gray-300"></div>
+          </div>
         </div>
         <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
           <!-- Replace with your content -->
           <div class="py-4">
-            <div class="border-4 border-dashed border-gray-200 rounded-lg h-96">
-              <div class="content" role="main">
-                <span>{{ title }}</span>
-              </div>
+            <div class="h-96">
+              <app-work-experience></app-work-experience>
+              <app-courses></app-courses>
             </div>
           </div>
           <!-- /End replace -->
