add skills draft

--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -1,11 +1,13 @@
-<div class="flow-root mt-16 mb-16">
-  <h1 class="text-2xl font-bold text-gray-900 truncate">
-    Обучение
-  </h1>
+<div class="flow-root mt-16 mb-16 md:px-6">
+  <div class="pb-5 border-b border-gray-200">
+    <h3 class="text-lg leading-6 font-medium text-gray-900">
+      Обучение
+    </h3>
+  </div>
   <ul role="list" class="-mb-8 mt-12">
     <li>
       <div class="relative pb-14">
-        <div class="relative flex items-start space-x-12">
+        <div class="relative flex items-start space-x-6">
           <div class="relative">
             <div class="h-20 w-20 rounded-full flex items-center justify-center bg-white">
               <img src="https://static.saas-support.com/uploaded/chat_widgets/2715/logo.png?1641888949087">
@@ -22,7 +24,11 @@
             </div>
             <div class="mt-2 text-sm text-gray-700">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tincidunt nunc ipsum tempor purus vitae id. Morbi in vestibulum nec varius. Et diam cursus quis sed purus nam.
+                Прошел курс обучения по программе
+                <a
+                  class="text-blue-700"
+                  href="https://levelp.ru/courses/veb-tekhnologii/web-developer/"
+              >Fullstack-разработчик (JavaScript)</a>
               </p>
             </div>
           </div>
