--- a/src/app/work-experience/work-experience.component.html
+++ b/src/app/work-experience/work-experience.component.html
@@ -1,12 +1,14 @@
-<div class="flow-root">
-  <h1 class="text-2xl font-bold text-gray-900 truncate">
-    Опыт работы
-  </h1>
+<div class="flow-root md:px-6">
+  <div class="pb-5 border-b border-gray-200">
+    <h3 class="text-lg leading-6 font-medium text-gray-900">
+      Опыт работы
+    </h3>
+  </div>
   <ul role="list" class="-mb-8 mt-12">
     <li>
       <div class="relative pb-14">
         <span class="absolute top-5 left-10 -ml-px h-full w-0.5 bg-gray-200" aria-hidden="true"></span>
-        <div class="relative flex items-start space-x-12">
+        <div class="relative flex items-start space-x-6">
           <div class="relative">
             <div class="h-20 w-20 rounded-full flex items-center justify-center bg-white">
               <svg viewBox="0 0 54 54">
@@ -28,7 +30,7 @@
             </div>
             <div class="mt-2 text-sm text-gray-700">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tincidunt nunc ipsum tempor purus vitae id. Morbi in vestibulum nec varius. Et diam cursus quis sed purus nam.
+                ?????
               </p>
             </div>
           </div>
@@ -38,7 +40,7 @@
 
     <li>
       <div class="relative pb-8">
-        <div class="relative flex items-start space-x-12">
+        <div class="relative flex items-start space-x-6">
           <div class="relative">
             <img
               class="h-20 w-20 rounded-full flex items-center justify-center bg-white"
@@ -56,7 +58,7 @@
             </div>
             <div class="mt-2 text-sm text-gray-700">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tincidunt nunc ipsum tempor purus vitae id. Morbi in vestibulum nec varius. Et diam cursus quis sed purus nam. Scelerisque amet elit non sit ut tincidunt condimentum. Nisl ultrices eu venenatis diam.
+                ????
               </p>
             </div>
           </div>
