add skills levelup certificate

--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -33,6 +33,14 @@
             </div>
           </div>
         </div>
+        <div class="space-y-12 mt-6 sm:grid sm:grid-cols-2 sm:gap-x-6 sm:gap-y-12 sm:space-y-0 lg:grid-cols-3 lg:gap-x-8">
+          <div class="aspect-w-3 aspect-h-2">
+            <img
+              class="object-cover shadow-lg rounded-lg"
+              src="assets/images/level-up-certificate.jpeg"
+              alt="">
+          </div>
+        </div>
       </div>
     </li>
   </ul>
