--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -184,7 +184,7 @@
         </div>
         <div class="max-w-7xl mx-auto px-6 py-10 sm:px-6 md:px-8">
           <!-- Replace with your content -->
-          <div class="py-4">
+          <div class="py-4 pr-6">
             <div class="h-96">
               <app-work-experience></app-work-experience>
               <app-courses></app-courses>
