--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -1,5 +1,5 @@
 <div class="flow-root mt-16 mb-16 md:px-6">
-  <div class="pb-5 border-b border-gray-200">
+  <div class="pb-5">
     <h3 class="text-lg leading-6 font-medium text-gray-900">
       Обучение
     </h3>
@@ -33,15 +33,13 @@
             </div>
           </div>
         </div>
-        <div class="space-y-12 mt-6 sm:grid sm:grid-cols-2 sm:gap-x-6 sm:gap-y-12 sm:space-y-0 lg:grid-cols-3 lg:gap-x-8">
-          <div class="aspect-w-3 aspect-h-2">
-            <img
-              class="object-cover shadow-lg rounded-lg"
-              src="assets/images/level-up-certificate.jpeg"
-              alt="">
-          </div>
-        </div>
       </div>
     </li>
   </ul>
+  <div class="pl-24">
+    <img
+      class="object-cover shadow-lg rounded-lg w-72"
+      src="assets/images/level-up-certificate.jpeg"
+      alt="">
+  </div>
 </div>
