--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,5 +1,5 @@
 <div class="flow-root md:px-6">
-  <div class="pb-5 border-b border-gray-200">
+  <div class="pb-5">
     <h3 class="text-lg leading-6 font-medium text-gray-900">
       Опыт работы
     </h3>
