--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,109 +1,32 @@
-<div class="flow-root mt-16 mb-16 md:px-6">
-  <div class="pb-5 border-b border-gray-200">
+<div class="flow-root md:px-6">
+  <div class="pb-5">
     <h3 class="text-lg leading-6 font-medium text-gray-900">
       Навыки
     </h3>
+    <div class="mt-12 max-w-xl text-sm text-gray-500">
+      <ul>
+        <li
+          *ngFor="let skill of skills"
+          class="mb-6"
+        >
+
+          <div class="flex justify-between mb-1">
+            <span class="text-base font-medium text-blue-700">{{ skill.title }}</span>
+          </div>
+          <div class="w-full bg-gray-200 rounded-full h-2.5">
+            <div class="bg-blue-600 h-2.5 rounded-full" [style.width.%]="skill.level"></div>
+          </div>
+          <div class="badges mt-4">
+            <span
+              *ngFor="let item of skill.items"
+              class="inline-flex items-center mb-1 mr-1 px-2 py-0.5 rounded text-xs font-medium bg-gray-100 text-gray-800">{{ item }}</span>
+          </div>
+
+        </li>
+      </ul>
+
+
+
+    </div>
   </div>
-
-  <ul role="list" class="grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 my-12">
-    <li class="col-span-1 flex flex-col text-center bg-white rounded-lg shadow divide-y divide-gray-200">
-      <div class="flex-1 flex flex-col p-8">
-        <div class="circle-wrap">
-          <div class="circle">
-            <div class="mask full">
-              <div class="fill"></div>
-            </div>
-            <div class="mask half">
-              <div class="fill"></div>
-            </div>
-            <div class="inside-circle"> 100% </div>
-          </div>
-        </div>
-        <h3 class="mt-6 text-gray-900 text-sm font-medium">Skill 1</h3>
-        <dl class="mt-1 flex-grow flex flex-col justify-between">
-          <dt class="sr-only">Title</dt>
-          <dd class="text-gray-500 text-sm">Описание...</dd>
-          <dt class="sr-only">Role</dt>
-          <dd class="mt-3">
-            <span class="px-2 py-1 text-green-800 text-xs font-medium bg-green-100 rounded-full">Admin</span>
-          </dd>
-        </dl>
-      </div>
-    </li>
-
-    <li class="col-span-1 flex flex-col text-center bg-white rounded-lg shadow divide-y divide-gray-200">
-      <div class="flex-1 flex flex-col p-8">
-        <div class="circle-wrap">
-          <div class="circle">
-            <div class="mask full">
-              <div class="fill"></div>
-            </div>
-            <div class="mask half">
-              <div class="fill"></div>
-            </div>
-            <div class="inside-circle"> 75% </div>
-          </div>
-        </div>
-        <h3 class="mt-6 text-gray-900 text-sm font-medium">Skill 2</h3>
-        <dl class="mt-1 flex-grow flex flex-col justify-between">
-          <dt class="sr-only">Title</dt>
-          <dd class="text-gray-500 text-sm">Описание...</dd>
-          <dt class="sr-only">Role</dt>
-          <dd class="mt-3">
-            <span class="px-2 py-1 text-green-800 text-xs font-medium bg-green-100 rounded-full">Admin</span>
-          </dd>
-        </dl>
-      </div>
-    </li>
-
-    <li class="col-span-1 flex flex-col text-center bg-white rounded-lg shadow divide-y divide-gray-200">
-      <div class="flex-1 flex flex-col p-8">
-        <div class="circle-wrap">
-          <div class="circle">
-            <div class="mask full">
-              <div class="fill"></div>
-            </div>
-            <div class="mask half">
-              <div class="fill"></div>
-            </div>
-            <div class="inside-circle"> 75% </div>
-          </div>
-        </div>
-        <h3 class="mt-6 text-gray-900 text-sm font-medium">Skill 3</h3>
-        <dl class="mt-1 flex-grow flex flex-col justify-between">
-          <dt class="sr-only">Title</dt>
-          <dd class="text-gray-500 text-sm">Описание...</dd>
-          <dt class="sr-only">Role</dt>
-          <dd class="mt-3">
-            <span class="px-2 py-1 text-green-800 text-xs font-medium bg-green-100 rounded-full">Admin</span>
-          </dd>
-        </dl>
-      </div>
-    </li>
-
-    <li class="col-span-1 flex flex-col text-center bg-white rounded-lg shadow divide-y divide-gray-200">
-      <div class="flex-1 flex flex-col p-8">
-        <div class="circle-wrap">
-          <div class="circle">
-            <div class="mask full">
-              <div class="fill"></div>
-            </div>
-            <div class="mask half">
-              <div class="fill"></div>
-            </div>
-            <div class="inside-circle"> 75% </div>
-          </div>
-        </div>
-        <h3 class="mt-6 text-gray-900 text-sm font-medium">Skill 4</h3>
-        <dl class="mt-1 flex-grow flex flex-col justify-between">
-          <dt class="sr-only">Title</dt>
-          <dd class="text-gray-500 text-sm">Описание...</dd>
-          <dt class="sr-only">Role</dt>
-          <dd class="mt-3">
-            <span class="px-2 py-1 text-green-800 text-xs font-medium bg-green-100 rounded-full">Admin</span>
-          </dd>
-        </dl>
-      </div>
-    </li>
-  </ul>
 </div>
