--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,6 +1,6 @@
-<div class="flow-root md:px-6">
+<div class="flow-root md:px-6 md:mt-6">
   <div class="pb-5">
-    <h3 class="text-lg leading-6 font-medium text-gray-900">
+    <h3 class="text-3xl leading-6 font-medium text-gray-900">
       Навыки
     </h3>
     <div class="mt-12 max-w-xl text-sm text-gray-500">
@@ -11,10 +11,14 @@
         >
 
           <div class="flex justify-between mb-1">
-            <span class="text-base font-medium text-blue-700">{{ skill.title }}</span>
+            <span class="text-base font-medium text-gray-900">{{ skill.title }}</span>
           </div>
           <div class="w-full bg-gray-200 rounded-full h-2.5">
-            <div class="bg-blue-600 h-2.5 rounded-full" [style.width.%]="skill.level"></div>
+            <div
+              class="bg-blue-600 h-2.5 rounded-full"
+              [ngClass]="skill.pro  ? 'bg-green-600' : 'bg-blue-600'"
+              [style.width.%]="skill.level"
+            ></div>
           </div>
           <div class="badges mt-4">
             <span
