--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,11 +6,14 @@
         alt=""
       >
       <div class="mt-2 ml-4 xl:ml-0 max-w-xl text-sm text-gray-500">
-        <h1 class="text-2xl font-semibold text-gray-900">
+        <h1 class="text-2xl mb-3 font-semibold text-gray-900">
           Федоров Юрий
         </h1>
-        <p class="text-base font-medium text-gray-500 group-hover:text-white">
+        <p class="text-sm font-medium text-gray-500 group-hover:text-white">
           Frontend-разработчик
+        </p>
+        <p class="text-sm font-medium text-gray-500 group-hover:text-white">
+          Тестировщик
         </p>
     </div>
   </div>
