--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
       </div>
 
       <div class="bg-white lg:min-w-0 lg:flex-1">
-        <div class="h-full py-6 px-6 sm:px-6">
+        <div class="h-full py-6 md:py-12 px-6 sm:px-6">
           <!-- Start main area-->
           <div class="relative h-full">
             <app-experience></app-experience>
