--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -1,6 +1,6 @@
 <div class="flow-root mt-16 mb-16 md:px-6">
   <div class="pb-5">
-    <h3 class="text-lg leading-6 font-medium text-gray-900">
+    <h3 class="text-3xl leading-6 font-medium text-gray-900">
       Обучение
     </h3>
   </div>
@@ -36,9 +36,9 @@
       </div>
     </li>
   </ul>
-  <div class="pl-24">
+  <div class="pl-0 md:pl-24">
     <img
-      class="object-cover shadow-lg rounded-lg w-72"
+      class="object-cover shadow-lg rounded-lg w-full"
       src="assets/images/level-up-certificate.jpeg"
       alt="">
   </div>
