--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,7 @@
           <div class="h-full py-6 relative">
             <app-about></app-about>
             <app-contacts></app-contacts>
+            <app-portfolio></app-portfolio>
           </div>
           <!-- End left column area -->
         </div>
