--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,7 @@
         <div class="h-full py-6 md:py-12 px-6 sm:px-6">
           <!-- Start main area-->
           <div class="relative h-full">
+            <app-summary></app-summary>
             <app-experience></app-experience>
             <app-courses></app-courses>
           </div>
