add greeting modal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
+<app-modal></app-modal>
+
 <div class="fixed top-0 left-0 w-1/2 h-full bg-white" aria-hidden="true"></div>
 <div class="fixed top-0 right-0 w-1/2 h-full" aria-hidden="true"></div>
 
-<div class="relative min-h-screen flex flex-col">
+<div
+  class="relative min-h-screen flex flex-col"
+  [ngClass]="isShownContent  ? '' : 'blur-md'"
+>
 
   <!-- 3 column wrapper -->
   <div class="flex-grow w-full max-w-7xl mx-auto xl:px-8 lg:flex">
