--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -67,7 +67,7 @@
           <div class="relative">
             <img
               class="h-20 w-20 rounded-full flex items-center justify-center bg-white"
-              src="https://nekor.ru/upload/logo.svg"
+              src="assets/images/logo-nik.svg"
               alt="">
           </div>
           <div class="min-w-0 flex-1">
