update avatar link

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,7 +2,7 @@
   <div class="pb-5 flex xl:block">
       <img
         class="inline-block rounded-md w-20 md:w-48"
-        src="https://media-exp1.licdn.com/dms/image/C4E03AQHXXrHbSZnCQw/profile-displayphoto-shrink_800_800/0/1606066680212?e=1647475200&v=beta&t=SlZwID8_8VINVSQZ04tPiWdZsJq6_dPtkgkiCcbHayc"
+        src="https://lh3.googleusercontent.com/a-/AOh14Gid6g0KGxKkenRR6Kzkuuqiz0t8SggtS0lUOONg=s576-p-rw-no"
         alt=""
       >
       <div class="mt-2 ml-4 xl:ml-0 max-w-xl text-sm text-gray-500">
