--- a/src/app/about/summary/summary.component.html
+++ b/src/app/about/summary/summary.component.html
@@ -1,12 +1,12 @@
 <div class="flow-root md:px-6 mb-20">
   <div class="pb-5">
     <h3 class="text-3xl leading-6 font-medium text-gray-900">
-      Об мне
+      About me
     </h3>
   </div>
   <div>
-    <p class="mt-1 text-sm text-gray-600 line-clamp-2">Я тестировщик.
-      <br><br> Приоритетной сферой деятельности для меня является Frontend и у меня есть начальный опыт в разработке приложений на Angular</p>
+    <p class="mt-1 text-sm text-gray-600 line-clamp-2">I'm a tester.
+      <br><br>My primary area of focus is QA and I have initial experience in Angular application development</p>
   </div>
 
 </div>
