--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -1,7 +1,7 @@
 <div class="flow-root mt-16 mb-16 md:px-6">
   <div class="pb-5">
     <h3 class="text-3xl leading-6 font-medium text-gray-900">
-      Обучение
+      Training
     </h3>
   </div>
   <ul role="list" class="-mb-8 mt-12">
@@ -16,19 +16,19 @@
           <div class="min-w-0 flex-1">
             <div>
               <div class="text-sm">
-                <a href="#" class="font-medium text-gray-900">Level UP - курсы подготовки IT специалистов</a>
+                <a href="#" class="font-medium text-gray-900">Level UP - IT training courses</a>
               </div>
               <p class="mt-0.5 text-sm text-gray-500">
-                Октябрь 2019 — Февраль 2020
+                October 2019 — February 2020
               </p>
             </div>
             <div class="mt-2 text-sm text-gray-700">
               <p>
-                Прошел курс обучения по программе
+                Completed a course on the program
                 <a
                   class="text-blue-700"
                   href="https://levelp.ru/courses/veb-tekhnologii/web-developer/"
-              >Fullstack-разработчик (JavaScript)</a>
+              >Fullstack-developer (JavaScript)</a>
               </p>
             </div>
           </div>
