--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,13 +7,13 @@
       >
       <div class="mt-2 ml-4 xl:ml-0 max-w-xl text-sm text-gray-500">
         <h1 class="text-2xl mb-3 font-semibold text-gray-900">
-          Федоров Юрий
+          Yury Fedorov
         </h1>
         <p class="text-sm font-medium text-gray-500 group-hover:text-white">
-          Frontend-разработчик
+          Front-end developer
         </p>
         <p class="text-sm font-medium text-gray-500 group-hover:text-white">
-          Тестировщик
+          QA Engineer
         </p>
       </div>
   </div>
