--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,7 +1,7 @@
 <div class="flow-root md:px-6 mt-10">
   <div class="pb-5">
     <div class="mt-2 max-w-xl text-sm text-gray-500">
-      <h3 class="text-2xl leading-6 font-medium text-gray-900">Мои проекты</h3>
+      <h3 class="text-2xl leading-6 font-medium text-gray-900">Portfolio</h3>
       <div class="mt-6 max-w-xl text-sm text-gray-500">
         <ul role="list">
           <li
