--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,7 +1,7 @@
 <div class="flow-root md:px-6 md:mt-6">
   <div class="pb-5">
     <h3 class="text-3xl leading-6 font-medium text-gray-900">
-      Навыки
+      Skills
     </h3>
     <div class="mt-12 max-w-xl text-sm text-gray-500">
       <ul>
