--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -10,12 +10,14 @@
           Yury Fedorov
         </h1>
         <p class="text-sm font-medium text-gray-500 group-hover:text-white">
-          Front-end developer
+          QA Engineer
         </p>
         <p class="text-sm font-medium text-gray-500 group-hover:text-white">
-          QA Engineer
+          Front-end (basics)
         </p>
       </div>
   </div>
 </div>
+
+<!--GitHub: https://github.com/yurifyodorov/yurifyodorov.github.io -->
 
