--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -24,7 +24,7 @@
             </div>
             <div class="mt-2 text-sm text-gray-700">
               <p>
-                Completed a course on the program
+                Graduation a course on the program
                 <a
                   class="text-blue-700"
                   href="https://levelp.ru/courses/veb-tekhnologii/web-developer/"
