--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -43,7 +43,7 @@
           </h3>
           <div class="mt-2">
             <p class="text-sm text-gray-500">
-              I'm Yura and this is my CV
+              I'm Yurii and this is my CV
             </p>
           </div>
         </div>
@@ -54,9 +54,11 @@
           type="button"
           class="inline-flex justify-center w-full rounded-md border border-transparent shadow-sm px-4 py-2 bg-indigo-600 text-base font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:text-sm"
         >
-          Got it
+          Ok
         </button>
       </div>
     </div>
   </div>
 </div>
+
+<!--GitHub: https://github.com/yurifyodorov/yurifyodorov.github.io -->
