--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -15,6 +15,12 @@
         <p class="text-sm font-medium text-gray-500 group-hover:text-white">
           Front-end (basics)
         </p>
+        <div>
+          <select disabled onChange="document.location.href=this.options[this.selectedIndex].value;" class="mt-8 opacity-25 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md">
+            <option value="/" selected>English</option>
+            <option value="/ru/">Русский</option>
+          </select>
+        </div>
       </div>
   </div>
 </div>
