--- a/src/app/about/summary/summary.component.html
+++ b/src/app/about/summary/summary.component.html
@@ -5,8 +5,23 @@
     </h3>
   </div>
   <div>
-    <p class="mt-1 text-sm text-gray-600 line-clamp-2">I'm a tester.
-      <br><br>My primary area of focus is QA and I have initial experience in Angular application development</p>
+    <p class="mt-1 text-sm text-gray-600 line-clamp-2">
+      I have a testing background and my main area of expertise is quality assurance.
+      <br><br>
+      In addition to my expertise in QA, I have gained initial experience in developing applications using both
+      <a
+        class="text-blue-700 font-medium"
+        href="https://angular-blog-educational.web.app/">
+        Angular
+      </a>
+      and
+      <a
+        class="text-blue-700 font-medium"
+        href="https://yurifedorov-crwn-clothing.netlify.app/">
+        React
+      </a>
+      frameworks.
+    </p>
   </div>
 
 </div>
